src/objects/Email_Logs__c.object
<CustomObject>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <label>Recipient</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remaining_Email_Invocation__c</fullName>
        <label>Remaining Email Invocation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender__c</fullName>
        <label>Sender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Email Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Email Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>